# Boot2Rust

./: .gitignore  Cargo-disabled.toml  Cargo.toml  x86_64-pc-efi.json
.cargo/: config
src/: boot.rs  main.rs
src/uefi/: mod.rs
