[package]
authors = ["Gurinder Singh <frederick.the.fool@gmail.com>"]
name = "boot"
 version = "0.1.0"
# description = "A crate that provides types for byte units (such as KiB, MiB etc.)"


[dependencies]
rlibc = "1.0"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }
# error-chain = "0.11.0"
# serde = "1.0.21"
# serde_derive = "1.0.21"